# components

./: LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
src/robot_parts/: agents.py  cli.py
