[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_parts"
version = "1.0.0"
description = "Components for building a customizable robot."
authors = [{ name = "Nathan Neibauer", email = "nneibauer044@gmail.com" }]
dependencies = ["pydantic-ai", "typer[all]"]

[project.optional-dependencies]
panel = ["panel", "holoviews", "bokeh", "numpy", "pandas"]
dev = ["pytest", "black", "ipdb", "ipython", "isort"]
test = ["pytest"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.12"

# Scripts
[project.scripts]
ask = "robot_parts.cli:app"
